# MetalTranslate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  build.sh  clean.sh  format.sh  init  install.sh  main.cpp  run.sh  setup.sh
models/: README.md
src/: MetalTranslate.cpp  MetalTranslate.h  MetalTranslateConfig.h  main.cpp  metaltranslate.cpp
